--- a/public/index.css
+++ b/public/index.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     color: #333;
-    background-color: red;
+    background-color: white;
   }
   
   /* Hero section */
